notification request undo

--- a/index.html
+++ b/index.html
@@ -100,42 +100,23 @@
 
 
 
-        Notification.requestPermission().then(async (permission) => {
+        Notification.requestPermission().then(permission => {
             if (permission === 'granted') {
                 console.log('Notification permission granted.');
-                const tempMessaging = await messaging();
 
-                if (tempMessaging) {
-                    const newSw = await navigator.serviceWorker.register(
-                        './firebase-messaging-sw.js'
-                    );
-
-                    return getNotificationPermission(async () => {
-                        await getToken(tempMessaging, { vapidKey: 'BJnzcOgSupGjACmEqinLpEBYtQUHD3DOTdYtyNUyzu9Vp4Ddqb7qL6y6fz7Mg-i1ikElRhzIM3qRFPuZF0kgen4', serviceWorkerRegistration: newSw }).then((currentToken) => {
-                            if (currentToken) {
-                                console.log('Current FCM token:', currentToken);
-                                localStorage.setItem('fcmToken', currentToken);
-                            } else {
-                                console.log('No FCM token available.');
-                            }
-                        }).catch((error) => {
-                            console.error('An error occurred while retrieving FCM token:', error);
-                        })
-                    });
-                }
                 // Get FCM token
-                // getToken(messaging, { vapidKey: "BJnzcOgSupGjACmEqinLpEBYtQUHD3DOTdYtyNUyzu9Vp4Ddqb7qL6y6fz7Mg-i1ikElRhzIM3qRFPuZF0kgen4" })
-                //     .then((currentToken) => {
-                //         if (currentToken) {
-                //             console.log('Current FCM token:', currentToken);
-                //             localStorage.setItem('fcmToken', currentToken);
-                //         } else {
-                //             console.log('No FCM token available.');
-                //         }
-                //     })
-                //     .catch((error) => {
-                //         console.error('An error occurred while retrieving FCM token:', error);
-                //     });
+                getToken(messaging, { vapidKey: "BJnzcOgSupGjACmEqinLpEBYtQUHD3DOTdYtyNUyzu9Vp4Ddqb7qL6y6fz7Mg-i1ikElRhzIM3qRFPuZF0kgen4" })
+                    .then((currentToken) => {
+                        if (currentToken) {
+                            console.log('Current FCM token:', currentToken);
+                            localStorage.setItem('fcmToken', currentToken);
+                        } else {
+                            console.log('No FCM token available.');
+                        }
+                    })
+                    .catch((error) => {
+                        console.error('An error occurred while retrieving FCM token:', error);
+                    });
             }
         });
 
