--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
         const messaging = getMessaging(app, {
-            vapidKey: "AAAAdwT_N08:APA91bEqk3mauwwbOjStFFgTErCKCWMzIoHEBLVCIcuwWvtc3a43dBvS2gVAsOy4BTFC6vhx8bNtrTaTAZ-tcZ2aG2Jguzc8RtsgSB6ciTqkJNOy3qfWNKMVNBB1ui1OWIPb9CZUWZ79",
-            serviceWorkerRegistration: {
-                url: 'https://manfulsinh.github.io/techexnew/firebase-messaging-sw.js',// Adjust the path based on your file location
-            },
+            // vapidKey: "AAAAdwT_N08:APA91bEqk3mauwwbOjStFFgTErCKCWMzIoHEBLVCIcuwWvtc3a43dBvS2gVAsOy4BTFC6vhx8bNtrTaTAZ-tcZ2aG2Jguzc8RtsgSB6ciTqkJNOy3qfWNKMVNBB1ui1OWIPb9CZUWZ79",
+            // serviceWorkerRegistration: {
+            //     url: 'https://manfulsinh.github.io/techexnew/firebase-messaging-sw.js',// Adjust the path based on your file location
+            // },
         });
         console.log(messaging, "messaging")
 
