notificatio reg use register

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
         navigator.serviceWorker.register(
             'https://manfulsinh.github.io/techexnew/firebase-messaging-sw.js'
         ).then(register => {
-            console.log("ngsw registerd", register)
+            console.log("ngsw registerd", register);
+            messaging.useServiceWorker(registration);
             getToken(messaging, { vapidKey: "BJnzcOgSupGjACmEqinLpEBYtQUHD3DOTdYtyNUyzu9Vp4Ddqb7qL6y6fz7Mg-i1ikElRhzIM3qRFPuZF0kgen4", register }).then((currentToken) => {
                 if (currentToken) {
                     console.log('Current FCM token:', currentToken);
