--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechX</title>
-    <base href="/techexnew/">
+    <!-- <base href="/techexnew/"> -->
     <link rel="shortcut icon" href="./img/logo1-remove.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -86,7 +86,7 @@
             console.log("ngsw register err", registerErr)
         });
 
-
+    
         const googleProvider = new GoogleAuthProvider();
         const facebookProvider = new FacebookAuthProvider();
 
@@ -134,3 +134,6 @@
 </body>
 
 </html>
+
+
+have mare localStorage user hoy to chat.html pages ma java devano naa hoy to aene redirect karvano pachho proper add script
