--- a/index.html
+++ b/index.html
@@ -63,18 +63,18 @@
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
         const messaging = getMessaging();
-        console.log(messaging, "messaging");
+        // console.log(messaging, "messaging");
         navigator.serviceWorker.register(
             'firebase-messaging-sw.js'
         ).then(register => {
-            console.log("ngsw registerd", register);
-            // messaging.useServiceWorker(register);
+            // console.log("ngsw registerd", register);
+     
             getToken(messaging, {
                 vapidKey: "BJnzcOgSupGjACmEqinLpEBYtQUHD3DOTdYtyNUyzu9Vp4Ddqb7qL6y6fz7Mg-i1ikElRhzIM3qRFPuZF0kgen4",
                 serviceWorkerRegistration: register
             }).then((currentToken) => {
                 if (currentToken) {
-                    console.log('Current FCM token:', currentToken);
+                    // console.log('Current FCM token:', currentToken);
                     localStorage.setItem('fcmToken', currentToken);
                 } else {
                     console.log('No FCM token available.');
@@ -118,7 +118,7 @@
 
         Notification.requestPermission().then(permission => {
             if (permission === 'granted') {
-                console.log('Notification permission granted.');
+                // console.log('Notification permission granted.');
 
              
 
