--- a/creat.html
+++ b/creat.html
@@ -402,7 +402,7 @@ function readFileAsBase64(file) {
 }
 
 function createPostObject(postText, base64String) {
-  console.log(localStorage.getItem("fcmToken")||"test","teststs")
+  // console.log(localStorage.getItem("fcmToken")||"test","teststs")
   return {
     text: postText,
     image: base64String,
