--- a/profile.html
+++ b/profile.html
@@ -556,7 +556,9 @@ line-height: 1;
 
 
 
-
+  if (!localStorage.getItem('user')) {
+                  window.location.href = 'index.html';
+              }
 
 </script> 
 
